--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-atlas-automate.svg" />
     <title>Atlas.Automate — Automação + IA Sob Medida</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
